using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace TadaWy.Domain.Entities
{
    public class Allergy
    {
      
            public int Id { get; set; }
            public string NameEn { get; set; } = default!;
            public string NameAr { get; set; } = default!;

            public ICollection<PatientAllergy> PatientAllergies { get; set; }
                = new List<PatientAllergy>();
        
    }
}
